---------------------------------------------------------------------------------------------------
Version: 2.4.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.4.2
Date: 2024-11-26
  Changes:
    - debugging now shows both current and future position
    - support rotating oblong entities with other sizes than 2x1
  Bugfixes:
    - adding a new entity to the "know entities" list would not update the internal storage
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Date: 2024-11-22
  Changes:
    - Fix missing error message if entities could not be moved at all
    - re-added locale string
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Date: 2024-11-22
  Changes:
    - 2.0.21 brought an addition to the LuaEntity::teleport API that makes all of the previous
      teleporting around no longer necessary. This makes the code much simpler and removes all
      of the 2.0 specific workaround for fluid entities etc. go away.
    - automatically mine any item on the ground that is lying in the path of an entity.
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2024-11-18
  Changes:
    - add debug visualization
    - rework collision logic for 2.0 (fixes the "disconnect pipe bug")
    - pay extra attention when moving fluid entities
    - write docs
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2024-11-10
  Changes:
    - .. and I need to learn how to write change log entries...
    - fix "can move entities over each other" report from forum. LuaEntity::can_place_entity has
      changed
---------------------------------------------------------------------------------------------------
Version: 2.2.0