@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.3
-Date: ????
+Date: 2024-11-30
   Changes:
+    - add more specific collision checks to allow entities that "hide" invisible entities
+      to move
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.2
 Date: 2024-11-26
